<resources>
    <string name="app_name">Sport Diary</string>
    <string name="first_screen">First screen</string>
    <string name="authorization">Authorization</string>
    <string name="registration">Registration</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="Warning">В этот день Вы, видимо, решили отдохнуть</string>

</resources>
